[metadata]
name = pyytest
version = 0.0.9
author = Patilla Code
author_email = patillacode@gmail.com
description = Python script to download videos as audio from a given YouTube playlist/video
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/patillacode/pyyt
project_urls =
    repository = https://gitlab.com/patillacode/pyyt

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    pyyt = pyyt:main

[options.packages.find]
where = src
