[metadata]
name = pyytest
version = 0.0.12
author = Patilla Code
author_email = patillacode@gmail.com
description = Python script to download videos as audio from a given YouTube playlist/video
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/patillacode/pyyt
project_urls =
    repository = https://gitlab.com/patillacode/pyyt

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pyfiglet
    simple-term-menu
    yt-dlp
    termcolor

[options.entry_points]
console_scripts =
    pyyt = src.pyyt:main

[options.packages.find]
exclude =
    downloads*
    examples*
    tools*
    docs*
    tests*
